@@ -55,7 +55,8 @@ public class ObserverRequestProcessor extends ZooKeeperCriticalThread implements
      */
     public ObserverRequestProcessor(ObserverZooKeeperServer zks,
             RequestProcessor nextProcessor) {
-        super("ObserverRequestProcessor:" + zks.getServerId());
+        super("ObserverRequestProcessor:" + zks.getServerId(), zks
+                .getZooKeeperServerListener());
         this.zks = zks;
         this.nextProcessor = nextProcessor;
     }
@@ -99,7 +100,7 @@ public class ObserverRequestProcessor extends ZooKeeperCriticalThread implements
                 }
             }
         } catch (Exception e) {
-            LOG.error("Unexpected exception causing exit", e);
+            handleException(this.getName(), e);
         }
         LOG.info("ObserverRequestProcessor exited loop!");
     }
