@@ -51,8 +51,10 @@ public class ReadOnlyRequestProcessor extends ZooKeeperCriticalThread implements
 
     private ZooKeeperServer zks;
 
-    public ReadOnlyRequestProcessor(ZooKeeperServer zks, RequestProcessor nextProcessor) {
-        super("ReadOnlyRequestProcessor:" + zks.getServerId());
+    public ReadOnlyRequestProcessor(ZooKeeperServer zks,
+            RequestProcessor nextProcessor) {
+        super("ReadOnlyRequestProcessor:" + zks.getServerId(), zks
+                .getZooKeeperServerListener());
         this.zks = zks;
         this.nextProcessor = nextProcessor;
     }
@@ -98,15 +100,13 @@ public class ReadOnlyRequestProcessor extends ZooKeeperCriticalThread implements
                     nextProcessor.processRequest(request);
                 }
             }
-        } catch (InterruptedException e) {
-            LOG.error("Unexpected interruption", e);
         } catch (RequestProcessorException e) {
             if (e.getCause() instanceof XidRolloverException) {
                 LOG.info(e.getCause().getMessage());
             }
-            LOG.error("Unexpected exception", e);
+            handleException(this.getName(), e);
         } catch (Exception e) {
-            LOG.error("Unexpected exception", e);
+            handleException(this.getName(), e);
         }
         LOG.info("ReadOnlyRequestProcessor exited loop!");
     }
